--- a/Practica2/SDL Game.vcxproj
+++ b/Practica2/SDL Game.vcxproj
@@ -88,6 +88,8 @@
     <ClInclude Include="p2DynArray.h" />
     <ClInclude Include="p2Point.h" />
     <ClInclude Include="p2QuadTree.h" />
+    <ClInclude Include="Stack.h" />
+    <ClInclude Include="Tree.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
